examples/errors/09_duplicated_procedure/duplicated_procedure.txy
proc test()
endproc;

proc test()
endproc;

proc main()
endproc;